# sofa

./: .gitignore  README.md  changelog.md  pom.xml
sofa/: .gitignore  pom.xml
sofa-platform/: README.md  pom.xml
sofa-platform/src/main/cpp/: .gitignore  CMakeLists.txt  build.sh  genHeader.sh  version.txt
sofa-platform/src/main/cpp/CMakeModules/: BuildTarget.cmake  CPUNameTest.cmake  UseDebugSymbols.cmake
sofa-platform/src/main/cpp/src/: sofa.h  sofa_bridj.h
sofa/src/main/java/be/angelcorp/sofa/: SofaLibrary.java  iauASTROM.java  iauLDBODY.java
sofa/src/main/jnaerator/: config.jnaerator
sofa/src/test/java/be/angelcorp/sofa/: TestSofa.java
